project/force-app/main/default/objects/Business_Entity__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Vincom Legal Entity</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Entities</relationshipLabel>
    <relationshipName>BEs_Account_Name</relationshipName>
</CustomField>