project/force-app/main/default/objects/Business_Entity__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>