project/force-app/main/default/objects/Business_Entity__c/fields/BE_Type__c.field-meta.xml
<CustomField>
    <fullName>BE_Type__c</fullName>
    <label>Project Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TTTM</fullName>
            </value>
            <value>
                <fullName>KPTM</fullName>
            </value>
            <value>
                <fullName>KDQC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>