project/force-app/main/default/objects/Business_Entity__c/fields/Business_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Code__c</fullName>
    <label>Project Code</label>
    <type>Text</type>
    <length>100</length>
</CustomField>