project/force-app/main/default/objects/Business_Entity__c/fields/Car_Slots__c.field-meta.xml
<CustomField>
    <fullName>Car_Slots__c</fullName>
    <label>Car Parking Slots</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>