project/force-app/main/default/objects/Business_Entity__c/fields/Committed_Ad_Location_Count__c.field-meta.xml
<CustomField>
    <fullName>Committed_Ad_Location_Count__c</fullName>
    <label>Committed Ad Locations</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>