project/force-app/main/default/objects/Business_Entity__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <label>VCR Company Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>