project/force-app/main/default/objects/Business_Entity__c/fields/Director_Of_Management_Board__c.field-meta.xml
<CustomField>
    <fullName>Director_Of_Management_Board__c</fullName>
    <label>Director of Management Board</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Business Entities</relationshipLabel>
    <relationshipName>BEs_Director_Of_Management_Board</relationshipName>
</CustomField>