project/force-app/main/default/objects/Business_Entity__c/fields/District_1__c.field-meta.xml
<CustomField>
    <fullName>District_1__c</fullName>
    <label>District</label>
    <type>Text</type>
    <length>255</length>
</CustomField>