project/force-app/main/default/objects/Business_Entity__c/fields/Events_Fairs__c.field-meta.xml
<CustomField>
    <fullName>Events_Fairs__c</fullName>
    <label>Events &amp; Fairs</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>