project/force-app/main/default/objects/Business_Entity__c/fields/Floor_2_Construction_Area__c.field-meta.xml
<CustomField>
    <fullName>Floor_2_Construction_Area__c</fullName>
    <label>Floor 2 Construction Area</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>