project/force-app/main/default/objects/Business_Entity__c/fields/FRAME_TOTEM_Long_Term__c.field-meta.xml
<CustomField>
    <fullName>FRAME_TOTEM_Long_Term__c</fullName>
    <label>FRAME/TOTEM (Long Term)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>