project/force-app/main/default/objects/Business_Entity__c/fields/GFA__c.field-meta.xml
<CustomField>
    <fullName>GFA__c</fullName>
    <label>Gross Floor Area (m2)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>