project/force-app/main/default/objects/Business_Entity__c/fields/Gross_Floor_Area_GFA__c.field-meta.xml
<CustomField>
    <fullName>Gross_Floor_Area_GFA__c</fullName>
    <label>Gross Floor Area (GFA)</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>