project/force-app/main/default/objects/Business_Entity__c/fields/Implementation_To_Budget_Rate__c.field-meta.xml
<CustomField>
    <fullName>Implementation_To_Budget_Rate__c</fullName>
    <label>Implementation to Budget Rate</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>