project/force-app/main/default/objects/Business_Entity__c/fields/Indoor_Area_Within_Land_Boundaries__c.field-meta.xml
<CustomField>
    <fullName>Indoor_Area_Within_Land_Boundaries__c</fullName>
    <label>Outdoor Area Out of Boundaries</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>