project/force-app/main/default/objects/Business_Entity__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <label>Integration Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>