project/force-app/main/default/objects/Business_Entity__c/fields/Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source__c</fullName>
    <label>Integration Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Value1</fullName><default>false</default><label>Value1</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>