project/force-app/main/default/objects/Business_Entity__c/fields/Land_Area__c.field-meta.xml
<CustomField>
    <fullName>Land_Area__c</fullName>
    <label>Land Area (m2)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>