project/force-app/main/default/objects/Business_Entity__c/fields/LOGO_LED_LIGHT_BOX_SLIMLED_LCD__c.field-meta.xml
<CustomField>
    <fullName>LOGO_LED_LIGHT_BOX_SLIMLED_LCD__c</fullName>
    <label>LOGO/LED/LIGHT BOX/SLIMLED/LCD</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>