project/force-app/main/default/objects/Business_Entity__c/fields/Net_Leasing_Area_NLA__c.field-meta.xml
<CustomField>
    <fullName>Net_Leasing_Area_NLA__c</fullName>
    <label>Net Leasing Area (NLA)</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
    <inlineHelpText>Auto-calculated by total RO area of this project</inlineHelpText>
</CustomField>