project/force-app/main/default/objects/Business_Entity__c/fields/NLA_Indoor__c.field-meta.xml
<CustomField>
    <fullName>NLA_Indoor__c</fullName>
    <label>NLA Indoor (m2)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>