project/force-app/main/default/objects/Business_Entity__c/fields/NLA_Outdoor__c.field-meta.xml
<CustomField>
    <fullName>NLA_Outdoor__c</fullName>
    <label>NLA Outdoor &amp; Warehouse (m2)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>