project/force-app/main/default/objects/Business_Entity__c/fields/Number_of_Ads_RO_in_BE__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ads_RO_in_BE__c</fullName>
    <label>Number of Ad RO in Project</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>