project/force-app/main/default/objects/Business_Entity__c/fields/Number_Of_Car_Parking_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Car_Parking_Spaces__c</fullName>
    <label>Number of Car Parking Spaces</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>