project/force-app/main/default/objects/Business_Entity__c/fields/Number_of_Commited_Ads_RO__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Commited_Ads_RO__c</fullName>
    <label>Number of Committed Ad RO</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>0</scale>
</CustomField>