project/force-app/main/default/objects/Business_Entity__c/fields/Number_of_Committed_Shophouses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Committed_Shophouses__c</fullName>
    <label>Number of Committed Shophouses</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>