project/force-app/main/default/objects/Business_Entity__c/fields/Number_of_Shopping_Malls__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shopping_Malls__c</fullName>
    <label>Number of Shopping Malls in Project</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>0</scale>
</CustomField>