project/force-app/main/default/objects/Business_Entity__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupancy Rate</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>