project/force-app/main/default/objects/Business_Entity__c/fields/Occupation_For_Advertising__c.field-meta.xml
<CustomField>
    <fullName>Occupation_For_Advertising__c</fullName>
    <formula>IF(Total_Ad_Location_Count__c &gt; 0, Committed_Ad_Location_Count__c / Total_Ad_Location_Count__c * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupation for Advertising (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>