project/force-app/main/default/objects/Business_Entity__c/fields/Occupation_For_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Occupation_For_Leasing__c</fullName>
    <formula>IF(NLA_Indoor__c &gt; 0, Total_Committed_Leased_Area__c / NLA_Indoor__c * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupation for Leasing (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>