project/force-app/main/default/objects/Business_Entity__c/fields/Outdoor_Area__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Area__c</fullName>
    <formula>Outdoor_Area_Within_Land_Boundary__c + Sidewalk_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outdoor Area (m2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>