project/force-app/main/default/objects/Business_Entity__c/fields/Outdoor_Area_Within_Land_Boundary__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Area_Within_Land_Boundary__c</fullName>
    <label>Outdoor Area Within Land Boundary (m2)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>