project/force-app/main/default/objects/Business_Entity__c/fields/Outdoor_Area_Within_The_Land_Boundary__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Area_Within_The_Land_Boundary__c</fullName>
    <label>Outdoor Area Out of Boundaries</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>