project/force-app/main/default/objects/Business_Entity__c/fields/Parking_Area__c.field-meta.xml
<CustomField>
    <fullName>Parking_Area__c</fullName>
    <label>Parking Area (m2)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>