project/force-app/main/default/objects/Business_Entity__c/fields/Parking_Scale__c.field-meta.xml
<CustomField>
    <fullName>Parking_Scale__c</fullName>
    <label>Parking Scale</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <inlineHelpText>EN: Number Of Car/Motorcycle Parking Spaces</inlineHelpText>
</CustomField>