project/force-app/main/default/objects/Business_Entity__c/fields/POSM__c.field-meta.xml
<CustomField>
    <fullName>POSM__c</fullName>
    <label>POSM</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>