project/force-app/main/default/objects/Business_Entity__c/fields/Project_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Opening_Date__c</fullName>
    <label>Project Opening Date</label>
    <type>Date</type>
</CustomField>