project/force-app/main/default/objects/Business_Entity__c/fields/Province_1__c.field-meta.xml
<CustomField>
    <fullName>Province_1__c</fullName>
    <label>Province/City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>An Giang</fullName>
            </value>
            <value>
                <fullName>Bắc Giang</fullName>
            </value>
            <value>
                <fullName>Bắc Kạn</fullName>
            </value>
            <value>
                <fullName>Bạc Liêu</fullName>
            </value>
            <value>
                <fullName>Bắc Ninh</fullName>
            </value>
            <value>
                <fullName>Bà Rịa - Vũng Tàu</fullName>
            </value>
            <value>
                <fullName>Bến Tre</fullName>
            </value>
            <value>
                <fullName>Bình Dương</fullName>
            </value>
            <value>
                <fullName>Bình Phước</fullName>
            </value>
            <value>
                <fullName>Bình Thuận</fullName>
            </value>
            <value>
                <fullName>Bình Định</fullName>
            </value>
            <value>
                <fullName>Cà Mau</fullName>
            </value>
            <value>
                <fullName>Cần Thơ</fullName>
            </value>
            <value>
                <fullName>Cao Bằng</fullName>
            </value>
            <value>
                <fullName>Gia Lai</fullName>
            </value>
            <value>
                <fullName>Hà Giang</fullName>
            </value>
            <value>
                <fullName>Hải Dương</fullName>
            </value>
            <value>
                <fullName>Hải Phòng</fullName>
            </value>
            <value>
                <fullName>Hà Nam</fullName>
            </value>
            <value>
                <fullName>Hà Nội</fullName>
            </value>
            <value>
                <fullName>Hà Tĩnh</fullName>
            </value>
            <value>
                <fullName>Hậu Giang</fullName>
            </value>
            <value>
                <fullName>Hòa Bình</fullName>
            </value>
            <value>
                <fullName>Hồ Chí Minh</fullName>
            </value>
            <value>
                <fullName>Hưng Yên</fullName>
            </value>
            <value>
                <fullName>Khánh Hòa</fullName>
            </value>
            <value>
                <fullName>Kiên Giang</fullName>
            </value>
            <value>
                <fullName>Kon Tum</fullName>
            </value>
            <value>
                <fullName>Lai Châu</fullName>
            </value>
            <value>
                <fullName>Lâm Đồng</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>