project/force-app/main/default/objects/Business_Entity__c/fields/SAP_BE_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_BE_ID__c</fullName>
    <externalId>true</externalId>
    <label>SAP Integration ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>