project/force-app/main/default/objects/Business_Entity__c/fields/Services_Sell_Advertising_Time__c.field-meta.xml
<CustomField>
    <fullName>Services_Sell_Advertising_Time__c</fullName>
    <label>Services (Sell Advertising Time)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>