project/force-app/main/default/objects/Business_Entity__c/fields/Shopping_Mall_Model__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Mall_Model__c</fullName>
    <label>Shopping Mall Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vincom Center</fullName>
            </value>
            <value>
                <fullName>Vincom Megamall</fullName>
            </value>
            <value>
                <fullName>Vincom Plaza</fullName>
            </value>
            <value>
                <fullName>Vincom Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>