project/force-app/main/default/objects/Business_Entity__c/fields/Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship__c</fullName>
    <label>Sponsorship</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>