project/force-app/main/default/objects/Business_Entity__c/fields/Street_1__c.field-meta.xml
<CustomField>
    <fullName>Street_1__c</fullName>
    <label>Street</label>
    <type>Text</type>
    <length>255</length>
</CustomField>