project/force-app/main/default/objects/Business_Entity__c/fields/Taxi_ATM__c.field-meta.xml
<CustomField>
    <fullName>Taxi_ATM__c</fullName>
    <label>Taxi/ATM</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>