project/force-app/main/default/objects/Business_Entity__c/fields/Total_Ad_Location_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Ad_Location_Count__c</fullName>
    <label>Total Ad Location Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>