project/force-app/main/default/objects/Business_Entity__c/fields/Total_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Area__c</fullName>
    <label>Total Area</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>