project/force-app/main/default/objects/Business_Entity__c/fields/Total_Area_of_Committed_Shopping_Malls__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_of_Committed_Shopping_Malls__c</fullName>
    <label>Total Area of Committed Shopping Malls</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>