project/force-app/main/default/objects/Business_Entity__c/fields/Total_Budget_Renting_Outdoor_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Renting_Outdoor_Available__c</fullName>
    <label>Total Budget Renting Outdoor Available</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>