project/force-app/main/default/objects/Business_Entity__c/fields/Total_Committed_Leased_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Committed_Leased_Area__c</fullName>
    <label>Total Committed Leased Area (m2)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>