project/force-app/main/default/objects/Business_Entity__c/fields/Total_Construction_Area_Of_Floors__c.field-meta.xml
<CustomField>
    <fullName>Total_Construction_Area_Of_Floors__c</fullName>
    <label>Total Construction Area of Floors</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>