project/force-app/main/default/objects/Business_Entity__c/fields/Total_RO_In_Shopping_Mall__c.field-meta.xml
<CustomField>
    <fullName>Total_RO_In_Shopping_Mall__c</fullName>
    <label>Total RO in Shopping Mall</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>