project/force-app/main/default/objects/Business_Entity__c/fields/Total_Shophouse__c.field-meta.xml
<CustomField>
    <fullName>Total_Shophouse__c</fullName>
    <label>SL Shophouse Trong DA</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>