project/force-app/main/default/objects/Business_Entity__c/fields/Total_Unit_Price_Available_Shophouse__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Price_Available_Shophouse__c</fullName>
    <label>Total Unit Price Available Shophouse</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>