project/force-app/main/default/objects/Business_Entity__c/fields/Used_Area__c.field-meta.xml
<CustomField>
    <fullName>Used_Area__c</fullName>
    <label>Used Area</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>