project/force-app/main/default/objects/Business_Entity__c/fields/VCR_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>VCR_Tax_Code__c</fullName>
    <label>MST VCR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>