project/force-app/main/default/objects/Business_Entity__c/recordTypes/KDQC.recordType-meta.xml
<RecordType>
    <fullName>KDQC</fullName>
    <active>true</active>
    <description>Ad Leasing</description>
    <label>Ad Leasing</label>
</RecordType>