project/force-app/main/default/objects/Business_Entity__c/recordTypes/KPTM.recordType-meta.xml
<RecordType>
    <fullName>KPTM</fullName>
    <active>true</active>
    <description>Commercial Townhouse</description>
    <label>Commercial Townhouse</label>
</RecordType>