project/force-app/main/default/objects/Business_Entity__c/recordTypes/TTTM.recordType-meta.xml
<RecordType>
    <fullName>TTTM</fullName>
    <active>true</active>
    <description>Shopping Mall (VCC, VMM, VCP, VC+)</description>
    <label>Shopping Mall</label>
</RecordType>