project/force-app/main/default/objects/Business_Entity__c/validationRules/Require_TTTM_Model.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_TTTM_Model</fullName>
    <active>true</active>
    <description>Shopping Mall Model is required when Record Type is TTTM</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = 'TTTM',
    TEXT(Shopping_Mall_Model__c) = ''
)</errorConditionFormula>
    <errorDisplayField>Shopping_Mall_Model__c</errorDisplayField>
    <errorMessage>Shopping Mall Model is required for TTTM type</errorMessage>
</ValidationRule>