project/force-app/main/default/objects/Business_Entity__c/listViews/All_KPTM.listView-meta.xml
<ListView>
    <fullName>All_KPTM</fullName>
    <columns>NAME</columns>
    <columns>BE_Type__c</columns>
    <columns>Province_1__c</columns>
    <columns>Land_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Business_Entity__c.KPTM</value>
    </filters>
    <label>All KPTM</label>
</ListView>