project/force-app/main/default/objects/Business_Entity__c/listViews/All_TTTM.listView-meta.xml
<ListView>
    <fullName>All_TTTM</fullName>
    <columns>NAME</columns>
    <columns>BE_Type__c</columns>
    <columns>Shopping_Mall_Model__c</columns>
    <columns>Province_1__c</columns>
    <columns>Opening_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Business_Entity__c.TTTM</value>
    </filters>
    <label>All TTTM</label>
</ListView>